CMAKE_MINIMUM_REQUIRED(VERSION 3.1.0)

PROJECT(CODING-INTERVIEW)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_BUILD_TYPE Debug)

INCLUDE_DIRECTORIES(include)

MACRO(SUBDIRLIST result curdir)
    FILE(GLOB children RELATIVE ${curdir} ${curdir}/*)
    SET(dirlist "")
    FOREACH(child ${children})
        IF(IS_DIRECTORY ${curdir}/${child})
            LIST(APPEND dirlist ${child})
        ENDIF()
    ENDFOREACH()
    SET(${result} ${dirlist})
ENDMACRO()

SET(SOURCE_DIR ${CMAKE_SOURCE_DIR}/src)

SUBDIRLIST(PROBLEM_DIR_NAMES ${SOURCE_DIR})

FOREACH(PROBLEM_DIR_NAME ${PROBLEM_DIR_NAMES})
    SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/${PROBLEM_DIR_NAME})
    STRING( REGEX REPLACE "(.*)_" "" PROBLEM_NAME ${PROBLEM_DIR_NAME})
    SET(PROBLEM_DIR ${SOURCE_DIR}/${PROBLEM_DIR_NAME})
    AUX_SOURCE_DIRECTORY(${PROBLEM_DIR} ${PROBLEM_NAME}_SRCS)
    ADD_EXECUTABLE(${PROBLEM_NAME} ${${PROBLEM_NAME}_SRCS})
ENDFOREACH()
