CMAKE_MINIMUM_REQUIRED(VERSION 3.1.0)

PROJECT(CODING-INTERVIEW)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_BUILD_TYPE Debug)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)

INCLUDE_DIRECTORIES(.)

ADD_SUBDIRECTORY(utils)

SET(PROBLEM_DIRS
        01_AssignmentOperator
        04_FindInPartiallySortedMatrix
        05_ReplaceSpaces
        06_PrintListInReversedOrder
        )

FOREACH(PROBLEM_DIR ${PROBLEM_DIRS})
    ADD_SUBDIRECTORY(${PROBLEM_DIR})
ENDFOREACH()
